QtUtils.cpp
@@ -209,7 +209,7 @@ bool QtUtils::isAReserveClass(CXXRecordDecl *recordDecl)
     if (!recordDecl)
         return false;
 
-    static const std::vector<std::string> classes = {"QVector", "vector", "QList", "QSet", "QVarLengthArray"};
+    static const std::vector<std::string> classes = {"QVector", "vector", "QList", "QSet"};
 
     return clazy_std::any_of(classes, [recordDecl](const string &className) {
         return Utils::derivesFrom(recordDecl, className);
